--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build outputs
+dist/
+build/
+
+# Coverage directory
+coverage/
+
+# Cache files
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
